Complete first version of 'How to create a chart'

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -10,6 +10,8 @@ import {Meta} from "@storybook/blocks";
 
 - Add CSS Variables to allow controlling the duration of D3
   Transitions.
+- Change Tooltips to not show anything if no arguments were
+  provided.
 
 
 ## Restructuring
