--- a/src/storybook/stories/using-respvis/arguments/chart-arguments/chart-arguments.mdx
+++ b/src/storybook/stories/using-respvis/arguments/chart-arguments/chart-arguments.mdx
@@ -14,7 +14,7 @@ chart level and can be passed to all chart types (except if stated otherwise).
 The practical use of these arguments is demonstrated by the creation of an
 example chart (multi line).
 
-## <a name="breakpoints-argument"></a> BreakPoints Argument
+## BreakPoints Argument
 
 The _**breakPoints**_ argument is a fundamental property of all chart types. It enables the user to specify the
 exact location of the chart's _**layout breakpoints**_. This information can be used by certain other arguments
