--- a/src/storybook/stories/top-level-mdx/glossary.mdx
+++ b/src/storybook/stories/top-level-mdx/glossary.mdx
@@ -4,10 +4,12 @@ import {Meta} from "@storybook/blocks";
 
 # Glossary
 
-- **_layout element_** An element in the replicated node tree of a chart.
-- **_DOM_** The Document Object Model. It is the internal data representation
+- **_layout element_**: An element in the replicated node tree of a chart.
+- **_DOM_**: The Document Object Model. It is the internal data representation
   of web documents by tools like browsers or server-side environments.
   The term is interchangeably used with the DOM API, the programming interface
   to access and manipulate the DOM.
-- **_SVG-DOM_** An extension of the DOM with the capabilities to represent
+- **_SVG-DOM_**: An extension of the DOM with the capabilities to represent
   SVG documents and provide a corresponding API to access and manipulate them.
+- **_chart viewer_**: A person looking at a chart and trying to understand
+  the information it provides.
