Add Todos for documentation

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -24,6 +24,9 @@ import {Meta} from "@storybook/blocks";
 ## Documentation and Testing
 
 - Add Guidelines for changing storybook documentation
+- Document Chart Examples Properly
+- Document arguments for: flipping, zooming, legend, labels, grid, categories
+- Document: scaled values, radius (scatterplot)
 
 
 
