Adapt release workflow

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -18,6 +18,7 @@ import {Meta} from "@storybook/blocks";
 
 - Test removal of path aliases and working with workspace
   module resolution instead.
+- Add TSLint and Prettier to enforce naming conventions.
 
 
 
@@ -33,3 +34,4 @@ import {Meta} from "@storybook/blocks";
 ## Bugs
 
 - Firefox: Fast resizing of charts with many data points leads to strange error log
+- Self-contained grouped bar chart example: Labels disappear partially on numeric filtering
