Adapt future outlook

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -25,6 +25,7 @@ import {Meta} from "@storybook/blocks";
 ## Documentation and Testing
 
 - Add Guidelines for changing storybook documentation
+- Change Docs favicon from Storybook to RespVis logo
 - Document Chart Examples Properly
 - Document arguments for: flipping, zooming, legend, labels, grid, categories
 - Document: scaled values, radius (scatterplot)
