Fix Watcher Task Rename Functions

--- a/src/storybook/stories/contributing/project-structure.mdx
+++ b/src/storybook/stories/contributing/project-structure.mdx
@@ -42,7 +42,7 @@ the build step all files which are necessary for serving an example chart
 are included in its corresponding folder in `dist`.
 
 To achieve consistency, the following file structure must be applied when adding
-a new self-contained chart example::
+a new self-contained chart example:
 
 ```
 ├── <chart>
