--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -29,6 +29,7 @@ import {Meta} from "@storybook/blocks";
 - Document Chart Examples Properly
 - Document arguments for: flipping, zooming, legend, labels, grid, categories
 - Document: scaled values, radius (scatterplot)
+- Packages Page is missing respvis-parcoord package.
 
 
 
