Rethink Tooltip Add Movable Cross Info to Tooltip

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -46,3 +46,5 @@ import {Meta} from "@storybook/blocks";
 - Parallel Coordinates Chart: Dragging Numeric Axes slightly changes scale. This leads to
   a lot of lines disappearing. Dragging same Axis slighly again recovers old axis scale.
 - Parallel Coordinates Chart: Line CSS Transition not enabled.
+- Layouting: A rapid change of the chart size, like opening dev tools, does not lead to rerender
+  sometimes.
