Formulate Download Options Better Add Info Tooltip for Embedded Download

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -48,3 +48,4 @@ import {Meta} from "@storybook/blocks";
 - Parallel Coordinates Chart: Line CSS Transition not enabled.
 - Layouting: A rapid change of the chart size, like opening dev tools, does not lead to rerender
   sometimes.
+- Download: Rotated Axis Text looks different in downloaded chart svg
