Fix Tooltip Formatting

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -12,6 +12,7 @@ import {Meta} from "@storybook/blocks";
   Transitions.
 - Change Movable Cross Tool to Select Tooltip Type Tool.
   Use Movable Cross as tool option.
+- For Inspect Tool + Cartesian Chart: Add Horizontal and Vertical Lines, connecting cross cursor with axes.
 
 
 ## Restructuring
