--- a/src/storybook/stories/top-level-mdx/glossary.mdx
+++ b/src/storybook/stories/top-level-mdx/glossary.mdx
@@ -13,3 +13,7 @@ import {Meta} from "@storybook/blocks";
   SVG documents and provide a corresponding API to access and manipulate them.
 - **_chart viewer_**: A person looking at a chart and trying to understand
   the information it provides.
+- **_library user_**: A person who creates visualizations by making use of any
+  RespVis bundle.
+- **_RespVis contributor_**: A person who intends to actively participate in the
+  development of RespVis.
