--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -20,6 +20,8 @@ import {Meta} from "@storybook/blocks";
 - Test removal of path aliases and working with workspace
   module resolution instead.
 - Add TSLint and Prettier to enforce naming conventions.
+- Have a look at color-continuous data component and update
+  point series color and radii properties.
 
 
 
