Refactor RespVals Scalable Radius WIP

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -14,6 +14,7 @@ import {Meta} from "@storybook/blocks";
   Use Movable Cross as tool option.
 - For Inspect Tool + Cartesian Chart: Add Horizontal and Vertical Lines, connecting cross cursor with axes.
 - Setting for toggling between category and sequential colors.
+- Find a way for easily changing underlying data of charts for different space requirements.
 
 ## Restructuring
 
