--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -15,6 +15,7 @@ import {Meta} from "@storybook/blocks";
 - For Inspect Tool + Cartesian Chart: Add Horizontal and Vertical Lines, connecting cross cursor with axes.
 - Setting for toggling between category and sequential colors.
 - Find a way for easily changing underlying data of charts for different space requirements.
+- Add defaults for clamping css vars of chart title, subtitle, labels
 
 ## Restructuring
 
