--- a/src/storybook/stories/using-respvis/charts/how-to-create-a-chart/how-to-create-a-chart-basic.mdx
+++ b/src/storybook/stories/using-respvis/charts/how-to-create-a-chart/how-to-create-a-chart-basic.mdx
@@ -19,17 +19,17 @@ want to work with RespVis using plain HTML, CSS, and JavaScript.
 The first thing to do is to download the
 [latest release](https://github.com/tugraz-isds/respvis/releases/latest)
 of RespVis, which holds a package.zip containing the latest standalone version
-of the library in ES format. This bundle contains and exports also
-the basic d3 functionality used in this tutorial. However, even the RespVis
+of the library in ES module format. This bundle contains and exports also
+the basic D3 functionality used in this tutorial. However, even the RespVis
 standalone package does not export the whole D3 library and if more advanced
-d3 functionality is needed it may be reasonable to download and include
+D3 functionality is needed it may be reasonable to download and include
 [D3 (version 7.6.0)](https://registry.npmjs.org/d3/-/d3-7.6.0.tgz) in one's project.
 
-Then one can start to create his project. This tutorial begins from scratch and explains
+Then one can start to create his/her project. This tutorial begins from scratch and explains
 how to progressively add functionally to achieve a fully responsive line chart.
 First, all files and directories must be created. This can be done by simply using
 a file manager or command line interface. Before continuing with the next section,
-one should have created the following files and directories:
+one must create the following files and directories:
 
 <Source code={tutorialFileStructure} language={"text"}/>
 
@@ -79,8 +79,8 @@ The first implementation step is to write the necessary markup to `line-chart.ht
 `} language={"html"}/>
 
 The above markup:
-1. includes `respvis.css` which is provided by RespVis and is located in
-`node_modules`. The file contains all default styling provided by the library.
+1. includes `respvis.css` which is part of the release package provided by RespVis.
+The file contains all default styling provided by the library.
 2. includes `line-chart.css`, a local CSS file for customizing the appearance of
 the line chart.
 3. defines an empty `<div>` element which will serve as chart-container.
@@ -92,7 +92,7 @@ For the above markup to function properly it is necessary to
 implement `line-chart.js`:
 
 <Source code={`
-import { LineChart, LineChartUserArgs, formatWithDecimalZero, select, format, timeFormat, timeYear } from 'respvis';
+import { LineChart, formatWithDecimalZero, select, format, timeFormat, timeYear } from 'respvis';
 
 //  Data Source: Studierendenstatistik
 //  https://online.tugraz.at/tug_online/studierendenstatistik.html
@@ -126,7 +126,7 @@ export function createLineChart(selector) {
   const chart = new LineChart(chartWindow, args)
   chart.buildChart()
 }
-`} language={"JavaScript"}/>
+`} language={"typescript"}/>
 
 The above code snippet performs the following actions:
 1. Importing the necessary dependencies from RespVis.
@@ -134,12 +134,11 @@ The above code snippet performs the following actions:
 included in comments.
 3. Defining the function for rendering the line chart:
 - First, the args object is defined. It contains the minimum number of
-properties necessary to still match the type LineChartUserArgs.
+properties necessary for being a valid chart argument.
 As can be seen, passing x and y values is a minimum requirement,
 since a line chart without values would not make any sense. There
 are many optional parameters for improving appearance and responsiveness.
-These can be added later, but the above example works at least without an
-error occurring.
+These can be added later, but the above example works already without errors.
 - Second, the chart is created and rendered. This is achieved by first
 using the passed selector to select and append a \<div\> to the chart-wrapper
 element. The created \<div\> and args object are passed to the LineChart
@@ -194,7 +193,7 @@ const args = {
   }
 }
 ...
-`} language={"JavaScript"}/>
+`} language={"typescript"}/>
 
 
 <SourceCollapseBlockByStoryObj story={CurrentStories.Labeled}/>
@@ -251,11 +250,11 @@ export function createLineChart(selector: string) {
   }
   ...
 }
-`} language={"JavaScript"}/>
+`} language={"typescript"}/>
 
 Passing values this way will make axes formatting much easier and enables
 the implementation of additional interactions which are not possible for
-categories, like zooming and numeric filtering. You can directly see the change
+categories, like zooming and numeric filtering. One can directly see the change
 when comparing the filter menu provided by the toolbar of the previous chart with
 the menu of the current chart. You will see that the categorical filter control
 elements for the year axis changed into numerical filter controls.
@@ -322,7 +321,7 @@ const args = {
   ...
 }
 ...
-`} language={"JavaScript"}/>
+`} language={"typescript"}/>
 
 <SourceCollapseBlockByStoryObj story={CurrentStories.WithResponsiveTitle}/>
 
@@ -397,7 +396,7 @@ const args = {
   ...
 }
 ...
-`} language={"JavaScript"}/>
+`} language={"typescript"}/>
 
 <SourceCollapseBlockByStoryObj story={CurrentStories.WithResponsiveAxisTicks}/>
 
@@ -412,7 +411,7 @@ One possible solution is to remove the axes and work with tooltips and labels in
 
 <Source code={`
 ...
-const userArgs = {
+const args = {
   ...
   series: {
     ...
@@ -430,7 +429,7 @@ const userArgs = {
   },
   ...
 }
-`} language={"JavaScript"}/>
+`} language={"typescript"}/>
 
 <Source code={`
 #chart {
@@ -473,4 +472,4 @@ The [final result](#story-tooltips-and-labels-instead-of-axes) of this
 tutorial is a fully responsive chart, capable of adapting its content
 depending on varying conditions. To implement additional features and
 interaction possibilities one may explore the
-[arguments section](?path=/docs/using-respvis-arguments-arguments--docs)
+[arguments section](?path=/docs/using-respvis-arguments-arguments--docs).
