Refactor categories Change Legend Default Styles Refactor Breakpoints Change Tick orientation args to Interpolation RespVals

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -22,10 +22,11 @@ import {Meta} from "@storybook/blocks";
 - Test removal of path aliases and working with workspace
   module resolution instead.
 - Add TSLint and Prettier to enforce naming conventions.
-- Have a look at color-continuous data component and update
   point series color and radii properties.
 - Restructure Legend in multiple containers (size, category, color scale),
   which can be aligned independently.
+- Add required responsive title to scaled values of all kinds.
+  Add optional callback for axis titles which is by default this responsive value.
 
 ## Documentation and Testing
 
