--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -17,6 +17,7 @@ import {Meta} from "@storybook/blocks";
 - Find a way for easily changing underlying data of charts for different space requirements.
 - Add defaults for clamping css vars of chart title, subtitle, labels.
 - Add possibility for multiple series categories.
+- Explore options for toolbar menu on mobile devices. (Maybe slide vertically instead of horizontally?)
 
 ## Restructuring
 
