--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -48,6 +48,7 @@ import {Meta} from "@storybook/blocks";
 - Rapid linear filtering needs additional update or points can be lost. Reproduce in multi-line chart.
 - Layouting: A rapid change of the chart size, like opening dev tools, does not lead to rerender
   sometimes (changed 2nd resize rerender delay, watch if the problem is gone).
+- Parcoord: When flipping in zoom state
 
 
 ## Notes
