--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -49,6 +49,9 @@ import {Meta} from "@storybook/blocks";
 - Layouting: A rapid change of the chart size, like opening dev tools, does not lead to rerender
   sometimes (changed 2nd resize rerender delay, watch if the problem is gone).
 - Parcoord: When flipping in zoom state
+- Parcoord: On mobile devices: Inversion Arrow is displayed vertically and at wrong location.
+- Parcoord: On mobile devices: Filter Elements are hardly controllable. Maybe remove for mobile devices,
+  since the same can be achieved with filter menu?
 
 
 ## Notes
