Change DataSeries to be interface instead of class Fix parcoord inversion arrow being displayed wrong in SVG1.1

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -18,6 +18,7 @@ import {Meta} from "@storybook/blocks";
 - Add defaults for clamping css vars of chart title, subtitle, labels.
 - Add possibility for multiple series categories.
 - Explore options for toolbar menu on mobile devices. (Maybe slide vertically instead of horizontally?)
+- Add dowload option to remove interaction elements.
 
 ## Restructuring
 
@@ -49,9 +50,11 @@ import {Meta} from "@storybook/blocks";
 - Layouting: A rapid change of the chart size, like opening dev tools, does not lead to rerender
   sometimes (changed 2nd resize rerender delay, watch if the problem is gone).
 - Parcoord: When flipping in zoom state
-- Parcoord: On mobile devices: Inversion Arrow is displayed vertically and at wrong location.
-- Parcoord: On mobile devices: Filter Elements are hardly controllable. Maybe remove for mobile devices,
+- Parcoord: On mobile devices: Inversion Arrow is displayed vertically and at wrong location (only chrome, not firefox).
+- Parcoord: On mobile devices: Filter Element Interactions do not work properly. Maybe remove for mobile devices,
   since the same can be achieved with filter menu?
+- Bar Charts at Initial Render: For e.g. grouped bar chart there is a quick flicker at the first render before
+  transitioning to the desired appearance.
 
 
 ## Notes
