Thesis Work Parcoord Restyling Removal of unnecessary axesScale

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -8,6 +8,8 @@ import {Meta} from "@storybook/blocks";
 
 ## Features
 
+- Add CSS Variables indicating the current transition level between two breakpoints (from 0 to 1).
+  This could be useful for interpolating e.g. font size between two breakpoints in a controlled way.
 - Add CSS Variables to allow controlling the duration of D3
   Transitions.
 - Change Movable Cross Tool to Select Tooltip Type Tool.
