Thesis Work Add Text Wrapping Experimental

--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -10,13 +10,8 @@ import {Meta} from "@storybook/blocks";
 
 - Add CSS Variables indicating the current transition level between two breakpoints (from 0 to 1).
   This could be useful for interpolating e.g. font size between two breakpoints in a controlled way.
-- Add CSS Variables to allow controlling the duration of D3
-  Transitions.
-- Change Movable Cross Tool to Select Tooltip Type Tool.
-  Use Movable Cross as tool option.
 - For Inspect Tool + Cartesian Chart: Add Horizontal and Vertical Lines, connecting cross cursor with axes.
 - Setting for toggling between category and sequential colors.
-- Find a way for easily changing underlying data of charts for different space requirements.
 - Add defaults for clamping css vars of chart title, subtitle, labels.
 - Add possibility for multiple series categories.
 - Explore options for toolbar menu on mobile devices. (Maybe slide vertically instead of horizontally?)
@@ -36,6 +31,7 @@ import {Meta} from "@storybook/blocks";
   the browser font size changes (for example a chart creator specifies 5px or simply 5
   because it easier to think in px. Internally the value is converted before being used
   for radii lenghts).
+- Improve way of changing underlying data of charts for different space requirements.
 
 ## Documentation and Testing
 
